# NoteManager

./: .gitignore  NoteManager.spec  README.md  pyproject.toml
src/obs_report/: __init__.py  __main__.py  cli.py  config.py  gui.py  llm_clinet.py  parser.py  tmp.py  watcher.py  writer.py
src/obs_report/Calendar/01_Daily/: 2025-06-09.md
tests/: test_parser.py  test_watcher.py
